--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
 
- DEBUG MODE IN CODEPEN 
- 
-**<a href="http://codepen.io/SoftwareRVG/pen/NNYJmv ">http://codepen.io/SoftwareRVG/pen/NNYJmv </a>**
+<a href="http://codepen.io/SoftwareRVG/pen/NNYJmv ">http://codepen.io/SoftwareRVG/pen/NNYJmv </a>
 
 
 git remote add origin https://github.com/SoftwareRVG/css3_designs_floating_logo.git
